infrastructure/istio/config/internal-gateway/kustomize/base/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    tailscale.com/hostname: istio-internal-gateway
  name: internal-gateway
spec:
  gatewayClassName: istio
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: gateway-config
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    hostname: "*.dev.internal.aliktb.com"
    name: https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: aliktb-com-tls
